--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.score {
+    display: flex;
+    justify-content: space-around;
+    width: 400px;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
 .game-container {
     position: relative;
     width: 400px;
